# flowing

./: .gitignore  LICENSE  Makefile  README.md  ncf-warp-train.py  node-warp-inference-image.py  node-warp-train.py  pyproject.toml  requirements.txt
docs/: index.html  styles.css  stylesheet.css
docs/assets/: ref.bib
experiments/3dgs/: ifmorph_baseline_3d.yaml  ncf_baseline_3d.yaml  ncf_baseline_3d_FAST.yaml  node_baseline_3d.yaml
experiments/faces/: 001_002-good_manual_landmarks-ifmorph.yaml  001_002-ncf-good_manual_landmarks-gelu.yaml  001_002-ncf-good_manual_landmarks-sigmoid.yaml  001_002-ncf-good_manual_landmarks-tanh.yaml  001_002-ncf-good_manual_landmarks.yaml  001_002-node-good_manual_landmarks.yaml  default_ncf_config.yaml  sandy_frll-002_ncf.yaml  sandy_frll-002_node.yaml
ifmorph/: dataset.py  fd_models.py  loss_functions.py  model.py  neural_conjugate_flows.py  neural_odes.py  util.py
standalone/: align.py  calc-lpips.py  crop-face-images.py  detect-face-landmarks.py
standalone/megadepth_generation/: crop.sh  pairing.py
